welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: reassignment to val
        die1=1
            ^withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
        if (die1==6){
        ^