welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles==false){
    return die1 + die2
  }else{
    if (die1==die2) {
        if (die1==6){
        die1=1
        }
    }else{
        return die1 + die2 +1
    }
  }
}